feat(pwa): added PWA support with manifest, service worker, icons, iOS/Android meta tags, and mobile CSS improvements

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
   <meta name="description" content="PlagiarismGuard - Academic Plagiarism Checker with Multi-API Support" />
   <meta name="keywords" content="plagiarism, checker, academic, research, similarity, detection" />
+
+  <!-- PWA Meta Tags -->
+  <link rel="manifest" href="/manifest.json" />
+  <meta name="theme-color" content="#2980b9" />
+  <meta name="mobile-web-app-capable" content="yes" />
+
+  <!-- iOS PWA Support -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="PlagiarismGuard" />
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+
+  <!-- Microsoft Tiles -->
+  <meta name="msapplication-TileColor" content="#2980b9" />
+  <meta name="msapplication-TileImage" content="/icons/icon-192.png" />
 
   <!-- Google Fonts - Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
