Complete Phase 11/12 Enterprise & Remediation release (v3.2)

--- a/extension/popup/popup.html
+++ b/extension/popup/popup.html
@@ -15,7 +15,7 @@
         <span class="logo-icon">🔍</span>
         <span class="logo-text">PlagiarismGuard</span>
       </div>
-      <div class="version">v2.4</div>
+      <div class="version">v3.2 Pro</div>
     </div>
 
     <div class="popup-body">
@@ -44,6 +44,11 @@
         <div class="setting-item">
           <label for="highlight-color">Highlight color:</label>
           <input type="color" id="highlight-color" value="#fef08a">
+        </div>
+        <div class="setting-item" style="margin-top: 10px; border-top: 1px solid #334155; padding-top: 10px;">
+          <label for="gemini-key" style="font-size: 11px; color: #94a3b8;">✨ Integrity AI (Gemini Key):</label>
+          <input type="password" id="gemini-key" placeholder="Enter API Key"
+            style="width: 100%; padding: 4px; background: #0f172a; border: 1px solid #334155; color: white; border-radius: 4px; font-size: 11px; margin-top: 4px;">
         </div>
       </div>
     </div>
