Update page title to v3.2.0 and sync site metadata

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <!-- Lucide Icons (fallback) -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lucide-static@0.294.0/font/lucide.min.css">
 
-  <title>PlagiarismGuard v2.4 - Academic Plagiarism Checker</title>
+  <title>PlagiarismGuard v3.2.0 - Enterprise & Remediation Edition</title>
 </head>
 
 <body>
